pc-200 Fix tooltip misaligned

--- a/src/styles/components/items/EventOccurrenceAndStockItem.scss
+++ b/src/styles/components/items/EventOccurrenceAndStockItem.scss
@@ -24,8 +24,8 @@
     }
 
 
-    .qty-info img{
-      margin-left: 6px;
+    .qty-info {
+      margin-left: 6px!important;
     }
   }
 
